MetaWindowActor: don't draw shadows for tiled windows with a match

The shadow between 2 tiled windows ruins the visual tiles effect.

https://bugzilla.gnome.org/show_bug.cgi?id=643075